--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Vets</title>
@@ -7,9 +7,9 @@
 <body>
 <!--/*@thymesVar id="vet" type="guru.springframework.sfgpetclinic.model.Vet"*/-->
 
-    <h1 th:text="'List of Vets'">List of Vets...</h1>
+    <h2 th:text="'List of Vets'">List of Vets...</h2>
 
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>Id</th>
@@ -21,7 +21,7 @@
         <tr th:each="vet : ${vet}">
             <td th:text="${vet?.id}">1</td>
             <td th:text="${vet?.firstName}">Joe</td>
-            <td th:text="${vet?lastName}">Buck</td>
+            <td th:text="${vet?.lastName}">Buck</td>
         </tr>
     </table>
 </body>
